--- a/Converter/Properties/Resource.resx
+++ b/Converter/Properties/Resource.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CsvColumnName" xml:space="preserve">
+    <value>Word</value>
+  </data>
+  <data name="CsvRowName" xml:space="preserve">
+    <value>Sentence</value>
+  </data>
+  <data name="DelimeterComma" xml:space="preserve">
+    <value>,</value>
+  </data>
   <data name="LabelForStartedForm" xml:space="preserve">
     <value>Write your text here</value>
   </data>
